css fixed spacing, changed background color

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: radial-gradient(circle, rgb(162, 0, 0), rgb(18, 0, 0));
+    background-image: radial-gradient(circle, rgb(18, 152, 139), rgb(0, 0, 0));
     background-size: cover;
     margin: 50px;
     font-family: 'Slackey';
@@ -22,7 +22,7 @@ body{
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-image: radial-gradient(circle, rgb(162, 0, 0), rgb(18, 0, 0));
+        background-image: radial-gradient(circle, rgb(18, 152, 139), rgb(0, 0, 0));
         background-size: cover;
         margin: 50px;
         font-family: 'Slackey';
@@ -81,7 +81,6 @@ body{
     font-size: 30px;
     font-weight: bold;
 }
-
 
 .emoji-container{
     display: flex;
